--- a/charts/models/templates/backend.yaml
+++ b/charts/models/templates/backend.yaml
@@ -1,5 +1,5 @@
 {{- range $backendName, $backendConfig := .Values.backends }}
-{{- if $backendConfig.enabled }}
+{{- if (default true $backendConfig.enabled) }}
 ---
 apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: Backend
