--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -124,6 +124,44 @@ rateLimitDefaults:
     - unit: Year
       tokens: 144000000
 
+modelDefaults:
+  backendRefs:
+    fwPrimary: &fwBackendPrimary
+      ref: fw-01
+      priority: 0
+    fwSecondary: &fwBackendSecondary
+      ref: fw-02
+      priority: 1
+    openaiPrimary: &openaiBackendPrimary
+      ref: openai-01
+      priority: 0
+    openaiSecondary: &openaiBackendSecondary
+      ref: openai-02
+      priority: 1
+    vertexPrimary: &vertexBackendPrimary
+      ref: vertex-ai-01
+      priority: 0
+    vertexSecondary: &vertexBackendSecondary
+      ref: vertex-ai-02
+      priority: 1
+    googleAiStudioPrimary: &googleAiStudioBackendPrimary
+      ref: google-ai-studio-01
+      priority: 0
+    googleAiStudioSecondary: &googleAiStudioBackendSecondary
+      ref: google-ai-studio-02
+      priority: 1
+  rateLimits:
+    fireworks: &fireworksModelRateLimits
+      envoyRateLimit: *rlRequest50kPerMin
+    openai: &openaiModelRateLimits
+      envoyRateLimit: *rlRequest50kPerMin
+    openaiLow: &openaiLowModelRateLimits
+      envoyRateLimit: *rlRequest30PerMin
+    openaiEmbed: &openaiEmbedModelRateLimits
+      envoyRateLimit: *rlRequest10kPerMin
+    gemini: &geminiModelRateLimits
+      envoyRateLimit: *rlRequest50kPerMin
+
 backends:
   fw-01:
     <<: *fireworksBackend
@@ -175,530 +213,409 @@ backends:
 models:
   # Fireworks AI Models
   # qwen3-coder-480b-a35b-instruct:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *fireworksModelRateLimits
   #   backends:
   #     fw-01:
-  #       enabled: true
-  #       ref: fw-01
+  #       <<: *fwBackendPrimary
   #       modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
-  #       priority: 0
   #     fw-02:
-  #       enabled: true
-  #       ref: fw-02
+  #       <<: *fwBackendSecondary
   #       modelNameOverride: "accounts/fireworks/models/qwen3-coder-480b-a35b-instruct"
-  #       priority: 1
 
   kimi-k2-instruct-0905:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/kimi-k2-instruct-0905"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/kimi-k2-instruct-0905"
-        priority: 1
 
   kimi-k2-thinking:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl800_15m_180m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/kimi-k2-thinking"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/kimi-k2-thinking"
-        priority: 1
 
   deepseek-v3p1:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/deepseek-v3p1"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/deepseek-v3p1"
-        priority: 1
 
   qwen3-235b-a22b-instruct-2507:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b-instruct-2507"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b-instruct-2507"
-        priority: 1
 
   # llama4-maverick-instruct-basic:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *fireworksModelRateLimits
   #   backends:
   #     fw-01:
-  #       enabled: true
-  #       ref: fw-01
+  #       <<: *fwBackendPrimary
   #       modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic" 
-  #       priority: 0
   #     fw-02:
-  #       enabled: true
-  #       ref: fw-02
+  #       <<: *fwBackendSecondary
   #       modelNameOverride: "accounts/fireworks/models/llama4-maverick-instruct-basic"
-  #       priority: 1
 
   # llama-v3p1-8b-instruct:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *fireworksModelRateLimits
   #   backends:
   #     fw-01:
-  #       enabled: true
-  #       ref: fw-01
+  #       <<: *fwBackendPrimary
   #       modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
-  #       priority: 0
   #     fw-02:
-  #       enabled: true
-  #       ref: fw-02
+  #       <<: *fwBackendSecondary
   #       modelNameOverride: "accounts/fireworks/models/llama-v3p1-8b-instruct"
-  #       priority: 1
 
   gpt-oss-120b:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/gpt-oss-120b"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/gpt-oss-120b"
-        priority: 1
 
   gpt-oss-20b:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/gpt-oss-20b"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/gpt-oss-20b"
-        priority: 1
 
   qwen3-235b-a22b-thinking-2507:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl800_15m_180m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b-thinking-2507"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b-thinking-2507"
-        priority: 1
 
   qwen3-coder-30b-a3b-instruct:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl2000_45m_540m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/qwen3-coder-30b-a3b-instruct"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/qwen3-coder-30b-a3b-instruct"
-        priority: 1
 
   qwen3-235b-a22b:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/qwen3-235b-a22b"
-        priority: 1
 
   glm-4p6:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/glm-4p6"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/glm-4p6"
-        priority: 1
 
   # glm-4p5:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *fireworksModelRateLimits
   #   backends:
   #     fw-01:
-  #       enabled: true
-  #       ref: fw-01
+  #       <<: *fwBackendPrimary
   #       modelNameOverride: "accounts/fireworks/models/glm-4p5"
-  #       priority: 0
   #     fw-02:
-  #       enabled: true
-  #       ref: fw-02
+  #       <<: *fwBackendSecondary
   #       modelNameOverride: "accounts/fireworks/models/glm-4p5"
-  #       priority: 1
 
   deepseek-v3p1-terminus:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *fireworksModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       fw-01:
-        ref: fw-01
+        <<: *fwBackendPrimary
         modelNameOverride: "accounts/fireworks/models/deepseek-v3p1-terminus"
-        priority: 0
       fw-02:
-        ref: fw-02
+        <<: *fwBackendSecondary
         modelNameOverride: "accounts/fireworks/models/deepseek-v3p1-terminus"
-        priority: 1
 
   # OpenAI Models
   o4-mini:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "o4-mini"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "o4-mini"
-        priority: 1
 
   # o4-mini-deep-research:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *openaiModelRateLimits
   #   backends:
   #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
+  #       <<: *openaiBackendPrimary
   #       modelNameOverride: "o4-mini-deep-research"
-  #       priority: 0
   #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
+  #       <<: *openaiBackendSecondary
   #       modelNameOverride: "o4-mini-deep-research"
-  #       priority: 1
 
   gpt-4-1:
-    envoyRateLimit: *rlRequest30PerMin
+    <<: *openaiLowModelRateLimits
     envoyTokenRateLimits: *tl1500_35m_420m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-4.1"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-4.1"
-        priority: 1
 
   gpt-4-1-mini:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-4.1-mini"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-4.1-mini"
-        priority: 1
 
   gpt-5:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-5"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-5"
-        priority: 1
 
   gpt-5-mini:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-5-mini"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-5-mini"
-        priority: 1
 
   gpt-5-nano:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-5-nano"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-5-nano"
-        priority: 1
 
   # codex-mini-latest:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 50000
-  #     unit: Minute
+  #   <<: *openaiModelRateLimits
   #   backends:
   #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
+  #       <<: *openaiBackendPrimary
   #       modelNameOverride: "codex-mini-latest"
-  #       priority: 0
   #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
+  #       <<: *openaiBackendSecondary
   #       modelNameOverride: "codex-mini-latest"
-  #       priority: 1
 
   text-embedding-3-large:
-    envoyRateLimit: *rlRequest10kPerMin
+    <<: *openaiEmbedModelRateLimits
     envoyTokenRateLimits: *tl10m_300m_3600m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "text-embedding-3-large"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "text-embedding-3-large"
-        priority: 1
 
   dall-e-3:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "dall-e-3"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "dall-e-3"
-        priority: 1
 
   gpt-image-1:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *openaiModelRateLimits
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-image-1"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-image-1"
-        priority: 1
 
   # whisper-1:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 10000
-  #     unit: Minute
+  #   <<: *openaiEmbedModelRateLimits
   #   backends:
   #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
+  #       <<: *openaiBackendPrimary
   #       modelNameOverride: "whisper-1"
-  #       priority: 0
   #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
+  #       <<: *openaiBackendSecondary
   #       modelNameOverride: "whisper-1"
-  #       priority: 1
 
   gpt-4o-mini-audio: 
-    envoyRateLimit: *rlRequest10kPerMin
+    <<: *openaiEmbedModelRateLimits
     envoyTokenRateLimits: *tl500_12m_144m
     backends:
       openai-01:
-        ref: openai-01
+        <<: *openaiBackendPrimary
         modelNameOverride: "gpt-4o-mini-audio-preview-2024-12-17"
-        priority: 0
       openai-02:
-        ref: openai-02
+        <<: *openaiBackendSecondary
         modelNameOverride: "gpt-4o-mini-audio-preview-2024-12-17"
-        priority: 1
 
   # gpt-4o-transcribe:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 10000
-  #     unit: Minute
+  #   <<: *openaiEmbedModelRateLimits
   #   backends:
   #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
+  #       <<: *openaiBackendPrimary
   #       modelNameOverride: "gpt-4o-transcribe"
-  #       priority: 0
   #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
+  #       <<: *openaiBackendSecondary
   #       modelNameOverride: "gpt-4o-transcribe"
-  #       priority: 1
 
   # gpt-4o-mini-tts:
-  #   enabled: true
-  #   envoyRateLimit:
-  #     requests: 10000
-  #     unit: Minute
+  #   <<: *openaiEmbedModelRateLimits
   #   backends:
   #     openai-01:
-  #       enabled: true
-  #       ref: openai-01
+  #       <<: *openaiBackendPrimary
   #       modelNameOverride: "gpt-4o-mini-tts"
-  #       priority: 0
   #     openai-02:
-  #       enabled: true
-  #       ref: openai-02
+  #       <<: *openaiBackendSecondary
   #       modelNameOverride: "gpt-4o-mini-tts"
-  #       priority: 1
 
   # Google Gemini Models
   gemini-2-5-flash:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       vertex-ai-01:
-        ref: vertex-ai-01
+        <<: *vertexBackendPrimary
         modelNameOverride: "gemini-2.5-flash"
-        priority: 0
       vertex-ai-02:
-        ref: vertex-ai-02
+        <<: *vertexBackendSecondary
         modelNameOverride: "gemini-2.5-flash"
-        priority: 1
 
   gemini-2-5-pro-reasoning:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       vertex-ai-01:
-        ref: vertex-ai-01
+        <<: *vertexBackendPrimary
         modelNameOverride: "gemini-2.5-pro"
-        priority: 0
       vertex-ai-02:
-        ref: vertex-ai-02
+        <<: *vertexBackendSecondary
         modelNameOverride: "gemini-2.5-pro"
-        priority: 1
 
   gemini-2-5-pro-reasoning-1024:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       vertex-ai-01:
-        ref: vertex-ai-01
+        <<: *vertexBackendPrimary
         modelNameOverride: "gemini-2.5-pro"
-        priority: 0
       vertex-ai-02:
-        ref: vertex-ai-02
+        <<: *vertexBackendSecondary
         modelNameOverride: "gemini-2.5-pro"
-        priority: 1
 
   gemini-3-pro-image-preview:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     backends:
       vertex-ai-01:
-        ref: vertex-ai-01
+        <<: *vertexBackendPrimary
         modelNameOverride: "gemini-3-pro-image-preview"
-        priority: 0
       vertex-ai-02:
-        ref: vertex-ai-02
+        <<: *vertexBackendSecondary
         modelNameOverride: "gemini-3-pro-image-preview"
-        priority: 1
 
   gemini-2-5-flash-lite:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       vertex-ai-01:
-        ref: vertex-ai-01
+        <<: *vertexBackendPrimary
         modelNameOverride: "gemini-2.5-flash-lite"
-        priority: 0
       vertex-ai-02:
-        ref: vertex-ai-02
+        <<: *vertexBackendSecondary
         modelNameOverride: "gemini-2.5-flash-lite"
-        priority: 1
 
   gemini-3-pro:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl1000_20m_240m
     backends:
       google-ai-studio-01:
-        ref: google-ai-studio-01
+        <<: *googleAiStudioBackendPrimary
         modelNameOverride: "gemini-3-pro-preview"
-        priority: 0
       google-ai-studio-02:
-        ref: google-ai-studio-02
+        <<: *googleAiStudioBackendSecondary
         modelNameOverride: "gemini-3-pro-preview"
-        priority: 1
 
   gemini-3-flash:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl3000_80m_960m
     backends:
       google-ai-studio-01:
-        ref: google-ai-studio-01
+        <<: *googleAiStudioBackendPrimary
         modelNameOverride: "gemini-3-flash-preview"
-        priority: 0
       google-ai-studio-02:
-        ref: google-ai-studio-02
+        <<: *googleAiStudioBackendSecondary
         modelNameOverride: "gemini-3-flash-preview"
-        priority: 1
 
   gemini-3-flash-thinking:
-    envoyRateLimit: *rlRequest50kPerMin
+    <<: *geminiModelRateLimits
     envoyTokenRateLimits: *tl800_15m_180m
     backends:
       google-ai-studio-01:
-        ref: google-ai-studio-01
+        <<: *googleAiStudioBackendPrimary
         modelNameOverride: "gemini-3-flash-preview"
-        priority: 0
       google-ai-studio-02:
-        ref: google-ai-studio-02
+        <<: *googleAiStudioBackendSecondary
         modelNameOverride: "gemini-3-flash-preview"
-        priority: 1
