--- a/charts/keycloak-backup/Chart.yaml
+++ b/charts/keycloak-backup/Chart.yaml
@@ -1,11 +1,6 @@
 apiVersion: v2
 name: keycloak-backup
-description: Automated Keycloak database backup and restore solution to S3-compatible storage
+description: Automated Keycloak database backup to S3-compatible storage
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
-
-dependencies:
-  - name: common
-    version: 4.6.2
-    repository: https://bjw-s-labs.github.io/helm-charts
