--- a/charts/keycloak-backup/templates/cronjob-backup.yaml
+++ b/charts/keycloak-backup/templates/cronjob-backup.yaml
@@ -1,121 +1,136 @@
-{{- if .Values.controllers.cronjob.enabled }}
-{{- include "keycloak-backup.validateValues" . -}}
-{{- $cronjob := .Values.controllers.cronjob -}}
-{{- $root := . -}}
-
+{{- if .Values.cronjob.enabled }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "keycloak-backup.cronjobName" . }}
+  name: {{ .Release.Name }}-backup
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "keycloak-backup.labels" . | nindent 4 }}
-    {{- if $cronjob.labels }}
-    {{- toYaml $cronjob.labels | nindent 4 }}
-    {{- end }}
-  annotations:
-    {{- if $cronjob.annotations }}
-    {{- toYaml $cronjob.annotations | nindent 4 }}
-    {{- end }}
-    description: "Keycloak configuration backup using kc.sh export"
+    app.kubernetes.io/name: keycloak-backup
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app.kubernetes.io/managed-by: Helm
 spec:
-  schedule: {{ $cronjob.schedule | quote }}
-  successfulJobsHistoryLimit: {{ $cronjob.successfulJobsHistoryLimit | default 3 }}
-  failedJobsHistoryLimit: {{ $cronjob.failedJobsHistoryLimit | default 3 }}
-  concurrencyPolicy: {{ $cronjob.concurrencyPolicy | default "Forbid" }}
+  schedule: {{ .Values.schedule | quote }}
+  successfulJobsHistoryLimit: {{ .Values.cronjob.successfulJobsHistoryLimit | default 3 }}
+  failedJobsHistoryLimit: {{ .Values.cronjob.failedJobsHistoryLimit | default 3 }}
+  concurrencyPolicy: {{ .Values.cronjob.concurrencyPolicy | default "Forbid" }}
   jobTemplate:
     spec:
       template:
         spec:
           containers:
             - name: uploader
-              image: amazon/aws-cli:2.15.0
+              image: amazon/aws-cli:{{ .Values.cronjob.awsCliImageTag }}
               env:
                 - name: S3_BUCKET
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
+                      name: {{ .Values.s3.secretName }}
                       key: S3_BUCKET_NAME
                 - name: AWS_ACCESS_KEY_ID
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
+                      name: {{ .Values.s3.secretName }}
                       key: S3_ACCESS_KEY_ID
                 - name: AWS_SECRET_ACCESS_KEY
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
+                      name: {{ .Values.s3.secretName }}
                       key: S3_SECRET_ACCESS_KEY
-                # - name: AWS_SESSION_TOKEN
-                #   valueFrom:
-                #     secretKeyRef:
-                #       name: {{ $root.Values.s3.secretName }}
-                #       key: AWS_SESSION_TOKEN
+                {{- if .Values.s3.secretName }}
+                {{- $secret := (lookup "v1" "Secret" .Release.Namespace .Values.s3.secretName) }}
+                {{- if and $secret (index $secret.data "AWS_SESSION_TOKEN") }}
+                - name: AWS_SESSION_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ .Values.s3.secretName }}
+                      key: AWS_SESSION_TOKEN
+                {{- end }}
+                {{- if and $secret (index $secret.data "S3_ENDPOINT") }}
+                - name: S3_ENDPOINT
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ .Values.s3.secretName }}
+                      key: S3_ENDPOINT
+                {{- end }}
+                {{- end }}
                 - name: AWS_DEFAULT_REGION
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.s3.secretName }}
+                      name: {{ .Values.s3.secretName }}
                       key: S3_REGION_NAME
               command:
                 - /bin/sh
                 - -c
                 - |
+                  set -ex
+
                   TIMESTAMP=$(date -u +"%Y%m%d_%H%M%S")
-                  
-                  # Wait for export
-                  echo "Waiting for export..."
-                  while [ ! -f /exported/realm_backup.json ]; do
-                    sleep 2
-                  done
-                  
+
                   {{- if .Values.keycloak.realm }}
                   BACKUP_FILE="{{ .Values.keycloak.realm }}_${TIMESTAMP}.json"
                   {{- else }}
                   BACKUP_FILE="all-realms_${TIMESTAMP}.json"
                   {{- end }}
-                  
-                  # Upload to S3
-                  aws s3 cp /exported/realm_backup.json s3://${S3_BUCKET}/{{ $root.Values.s3.prefix }}/${BACKUP_FILE}
-                  
+
+                  # Build S3 path with prefix handling
+                  {{- if .Values.s3.prefix }}
+                  S3_PATH="{{ .Values.s3.prefix }}/${BACKUP_FILE}"
+                  {{- else }}
+                  S3_PATH="${BACKUP_FILE}"
+                  {{- end }}
+
+                  {{- if .Values.s3.endpoint }}
+                  aws s3 cp \
+                    --endpoint-url ${S3_ENDPOINT} \
+                    /exported/realm_backup.json \
+                    s3://${S3_BUCKET}/${S3_PATH}
+                  {{- else }}
+                  aws s3 cp \
+                    /exported/realm_backup.json \
+                    s3://${S3_BUCKET}/${S3_PATH}
+                  {{- end }}
+
                   echo "Uploaded: $BACKUP_FILE"
               volumeMounts:
                 - name: export-volume
                   mountPath: /exported
               securityContext:
-                allowPrivilegeEscalation: false
-                readOnlyRootFilesystem: true
-                capabilities:
-                  drop:
-                    - ALL
+                {{- toYaml .Values.cronjob.uploaderSecurityContext | nindent 16 }}
+              resources:
+                {{- toYaml .Values.cronjob.resources.uploader | nindent 16 }}
           initContainers:
             - name: exporter
-              image: quay.io/keycloak/keycloak:24.0
+              image: quay.io/keycloak/keycloak:{{ .Values.keycloak.imageTag }}
               env:
                 - name: KEYCLOAK_ADMIN
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.keycloak.secretName }}
+                      name: {{ .Values.keycloak.secretName }}
                       key: username
                 - name: KEYCLOAK_ADMIN_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.keycloak.secretName }}
+                      name: {{ .Values.keycloak.secretName }}
                       key: password
                 - name: KC_HOSTNAME
                   valueFrom:
                     secretKeyRef:
-                      name: {{ $root.Values.keycloak.secretName }}
+                      name: {{ .Values.keycloak.secretName }}
                       key: hostname
               command:
                 - /bin/sh
                 - -c
                 - |
+                  set -ex
+
                   TIMESTAMP=$(date -u +"%Y%m%d_%H%M%S")
-                  
+
                   # Create writable directory for Quarkus build
                   export QUARKUS_CACHE_DIR=/tmp/quarkus-cache
                   mkdir -p $QUARKUS_CACHE_DIR
-                  
+
                   {{- if .Values.keycloak.realm }}
                   echo "Exporting realm: {{ .Values.keycloak.realm }}"
                   KC_CACHE_DIR=$QUARKUS_CACHE_DIR /opt/keycloak/bin/kc.sh export \
@@ -129,20 +144,15 @@ spec:
                     --file /exported/realm_backup.json \
                     --users realm_file --optimized
                   {{- end }}
-                  
+
                   echo "Export complete"
               volumeMounts:
                 - name: export-volume
                   mountPath: /exported
               securityContext:
-                runAsUser: 1000
-                runAsGroup: 1000
-                runAsNonRoot: true
-                allowPrivilegeEscalation: false
-                readOnlyRootFilesystem: false
-                capabilities:
-                  drop:
-                    - ALL
+                {{- toYaml .Values.cronjob.exporterSecurityContext | nindent 16 }}
+              resources:
+                {{- toYaml .Values.cronjob.resources.exporter | nindent 16 }}
           volumes:
             - name: export-volume
               emptyDir: {}
