--- a/charts/keycloak-backup/values.yaml
+++ b/charts/keycloak-backup/values.yaml
@@ -1,23 +1,7 @@
-## @section Global Configuration
-## @param fullnameOverride Full name override
-## @param nameOverride Name override
-
-global:
-  # -- Full name override
-  fullnameOverride: ""
-  # -- Name override
-  nameOverride: ""
-
-# -- Global labels applied to all resources
-globalLabels: {}
-  # app.kubernetes.io/part-of: keycloak-backup
-
-# -- Global annotations applied to all resources
-globalAnnotations: {}
-  # description: "Keycloak configuration backup and restore"
-
 ## @section Keycloak Configuration
 keycloak:
+  # -- Keycloak image tag
+  imageTag: "24.0"
   # -- Secret name containing Keycloak admin credentials (must contain: username, password, hostname)
   secretName: "keycloak-admin"
   # -- Realm to backup (defaults to all realms if not specified)
@@ -27,99 +11,62 @@ keycloak:
 
 ## @section S3 Storage Configuration
 s3:
+  # -- S3 endpoint URL (empty for AWS S3, set for MinIO/Ceph/Localstack)
+  endpoint: ""
   # -- S3 prefix/path within bucket
   prefix: ""
-  # -- REQUIRED: Secret name containing S3 credentials (created by Terraform with S3_* keys)
+  # -- Secret name containing S3 credentials
   secretName: "keycloak-s3"
 
-## @section RBAC Configuration
-rbac:
-  # -- Create RBAC resources (ServiceAccount, Role, RoleBinding)
-  create: true
-  # -- Service account name (defaults to fullname)
-  serviceAccountName: ""
-  # -- Additional role rules
-  extraRules: []
+## @section Backup Schedule
+# -- CronJob schedule (default: daily at 2 AM)
+schedule: "0 2 * * *"
 
-## @section Backup Controller (CronJob)
-controllers:
-  cronjob:
-    # -- Enable scheduled backup CronJob
-    enabled: true
-    # -- Controller identifier (used for labels)
-    identifier: "keycloak-backup"
-    # -- CronJob schedule (default: every minute for testing)
-    schedule: "* * * * *"
-    # -- Concurrency policy (Forbid, Replace, Allow)
-    concurrencyPolicy: Forbid
-    # -- Number of successful jobs to keep
-    successfulJobsHistoryLimit: 3
-    # -- Number of failed jobs to keep
-    failedJobsHistoryLimit: 3
-    # -- Starting deadline seconds
-    startingDeadlineSeconds: 30
-    # -- Pod security context
-    podSecurityContext:
-      runAsNonRoot: true
-      runAsUser: 999
-      runAsGroup: 999
-      fsGroup: 999
-    # -- Container security context
-    securityContext:
-      allowPrivilegeEscalation: false
-      readOnlyRootFilesystem: true
-      capabilities:
-        drop:
-          - ALL
-    # -- Resources
-    resources:
+## @section Backup CronJob
+cronjob:
+  # -- Enable scheduled backup CronJob
+  enabled: true
+  # -- Concurrency policy (Forbid, Replace, Allow)
+  concurrencyPolicy: "Forbid"
+  # -- Number of successful jobs to keep
+  successfulJobsHistoryLimit: 3
+  # -- Number of failed jobs to keep
+  failedJobsHistoryLimit: 3
+  # -- AWS CLI image tag
+  awsCliImageTag: "2.17.0"
+  # -- Pod security context
+  podSecurityContext:
+    runAsNonRoot: true
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
+  # -- Exporter container security context
+  exporterSecurityContext:
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: false
+    capabilities:
+      drop:
+        - ALL
+  # -- Uploader container security context
+  uploaderSecurityContext:
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    capabilities:
+      drop:
+        - ALL
+  # -- Resources
+  resources:
+    exporter:
       requests:
         cpu: "100m"
-        memory: "256Mi"
-      limits:
-        cpu: "500m"
         memory: "512Mi"
-    # -- Termination grace period seconds
-    terminationGracePeriodSeconds: 30
-
-  job:
-    # -- Enable restore Job
-    enabled: true
-    # -- Controller identifier (used for labels)
-    identifier: "keycloak-restore"
-    # -- Job annotations
-    annotations:
-      helm.sh/hook: post-install
-      helm.sh/hook-delete-policy: hook-succeeded,before-hook-creation
-    # -- Pod security context
-    podSecurityContext:
-      runAsNonRoot: true
-      runAsUser: 999
-      runAsGroup: 999
-      fsGroup: 999
-    # -- Container security context
-    securityContext:
-      allowPrivilegeEscalation: false
-      readOnlyRootFilesystem: true
-      capabilities:
-        drop:
-          - ALL
-    # -- Resources
-    resources:
-      requests:
-        cpu: "100m"
-        memory: "256Mi"
       limits:
-        cpu: "500m"
+        cpu: "1000m"
         memory: "1Gi"
-    # -- Termination grace period seconds
-    terminationGracePeriodSeconds: 30
-    # -- TTL seconds after job finishes
-    ttlSecondsAfterFinished: 300
-    # -- Backoff limit for job retries
-    backoffLimit: 4
-
-## @section Restore Configuration
-restore:
-  # -- S3 object key to restore (empty = manual trigger required via --set)
-  object: ""
+    uploader:
+      requests:
+        cpu: "50m"
+        memory: "128Mi"
+      limits:
+        cpu: "200m"
+        memory: "256Mi"
