--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -168,11 +168,13 @@ backends:
     secretRef:
       name: fireworks-api-key-01
     resourceName: fw-backend-01-svc
+    #enabled: false
   fw-02:
     <<: *fireworksBackend
     resourceName: fw-backend-02-svc
     secretRef:
       name: fireworks-api-key-02
+    #enabled: false
   openai-01:
     <<: *openaiBackend
     resourceName: openai-backend-01-svc
