Refactor/model chart (#31)
* update(): refactor values.yaml file and templates files

* update: add rate limit defaults and anchors

* update(): deep refactor of values.yaml

* (chore): fixed conditional for disabling backends

---------

Co-authored-by: Koufan-De-king <Menkene.Koufan@adorsys.com>

--- a/charts/models/templates/backend.yaml
+++ b/charts/models/templates/backend.yaml
@@ -1,5 +1,5 @@
 {{- range $backendName, $backendConfig := .Values.backends }}
-{{- if $backendConfig.enabled }}
+{{- if not (eq $backendConfig.enabled false) }}
 ---
 apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: Backend
